# VisIVO-Connect

./: .env.example  .gitignore  README.md
backend/: pyproject.toml  requirements-dev.txt  requirements.txt
backend/app/: main.py
backend/core/: config.py  models.py  observability.py  session.py
backend/data/: __init__.py  importers.py
backend/rendering/: __init__.py  isosurface_pipeline.py  vlva_colormaps.py  vtk_datacube_renderer.py
backend/tests/: fake_renderers.py  test_config.py  test_dataset_browser_api.py  test_dataset_importer.py  test_dataset_importer_fits_robustness.py  test_fits_datacube.py  test_isosurface_pipeline.py  test_ops_endpoints.py  test_render_protocol_validation.py  test_session_manager.py  test_soak_remote_render.py
backend/transport/: video_track.py
deploy/systemd/: visivo-connect.service
docs/: architecture.md  bottleneck-notes.md  demo-checklist.md  demo-runbook.md  fits-e2e-validation-report.md  metrics-format.md  protocol.md
scripts/: run-prod.sh
tools/: control-burst-input.mjs  generate_sample_datacube.py  soak_remote_render.py  validate_fits_datacube.py
tools/metrics/: sample-report.json  summarize-metrics.mjs
web/: app.js  index.html  styles.css
