[project]
name = "visivo-remote-backend"
version = "0.1.0"
description = "Remote scientific visualization backend (VTK + WebRTC + WebSocket)"
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.111.0",
  "uvicorn[standard]>=0.30.0",
  "aiortc>=1.9.0",
  "av>=12.0.0",
  "numpy>=1.26.0",
  "vtk>=9.3.0",
  "pydantic>=2.8.0",
  "astropy>=6.0.0",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"
